# xMZ-Mod-Touch-GUI

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  Cargo.toml  Gemfile  Makefile  Makefile.am  Makefile.decl  README  README.md  TODO  autogen.sh  configure.ac  generate-and-publish-documentation.sh  gource-player.sh  icons.mk  install.sh  main.c  testdata.sh  update.sh  xmz.desktop  xmz_mod_touch.desktop  zzinstall.sh
config/: deploy.rb
config/deploy/: production.rb  staging.rb
data/: Makefile.am  com.gaswarnanlagen.xmz.gschema.xml.in.in  xmz-glade.xml  xmz-mod-touch-gui.css  xmz-mod-touch-gui.glade  xmz-mod-touch-gui.gresource.xml  xmz.1  xmz.appdata.xml  xmz.desktop.in.in
data/icons/: Makefile.am
doc/: Bigpicture.graphml
examples/: add_zone_template.css  add_zone_template.glade  add_zone_template.rs  add_zone_template_notebook.glade  concentration.rs  gtk_css_global-lite.rs  gtk_css_global.rs  gtk_css_per_element-lite.rs  gtk_css_per_element.rs  switch_notebook_tab.css  switch_notebook_tab.glade  switch_notebook_tab.rs  sysinfo.rs  treestore.rs  treeview.rs  xmz_mod_touch_client.rs
lib/capistrano/tasks/: access_check.rake  agent_forwarding.rake  uptime.rake  xmz_mod_touch_gui.rake
libxmz/: Makefile.am  libxmz-1.0.pc.in  xmz-app-dirs.vala  xmz-database-backend.vala  xmz-init.vala  xmz-modbus-backend.vala  xmz-resource.vala  xmz-sensor-controller.vala  xmz-sensor-list-box.vala  xmz-sensor-list-view.vala  xmz-sensor-model.vala  xmz-sensor.vala
libxmz-ext/: Makefile.am  libxmz-ext-1.0.pc.in  xmz-ext-activity.vala  xmz-ext-application.vala  xmz-ext-notification.vala  xmz-ext-notifications.vala  xmz-ext-preferences.vala  xmz-ext-ui-element.vala  xmz-ext-ui.vala
libxmz-ext/resources/: resources.xml
libxmz/resources/: resources.xml
libxmz/resources/ui/: libxmz-style.css  xmz-sensor-list-box-row.ui  xmz-sidebar.ui
po/: ChangeLog  LINGUAS  POTFILES.in  de.po  en_GB.po  update-pofiles
share/: README.md
src/: #xMZ-Mod-Touch.glade#  DatabaseBackend.vala  MainWindow.glade  Makefile.am  Sensor-layout.glade  SensorModel.vala  SensorNode.vala  application.rs  basic_window  basic_window.glade  basic_window.vala  co_no2_kombisensor_mod.rs  common.rs  error.rs  gtk-sample.vala  gui.css  lib.rs  macros.rs  main.c  main.css  main.glade  main.rs  main.vala  main_window  main_window.vala  module.rs  notebook.rs  resources.c  scaffold.glade  sensor.glade  sensor.rs  sensor.vala  sensor_index.rs  server.rs  sysinfo.rs  window.ui  xMZ-Mod-Touch.glade  xmz-mod-touch-gui.desktop  xmz-mod-touch-gui.vala  xmz.vala  (+6 more)
src/api_client/: api_client.rs  mod.rs
src/app/: mod.rs
src/application/: application.rs  gui.css  main.glade  main.old.glade  mod.rs
src/client/: client.rs
src/controllers/: mod.rs  modules_controller.rs
src/errors/: errors.rs  mod.rs
src/gui/gtk3/: application.rs  application_old.rs  gui.glade  gui2.glade  interface.css  interface.glade  macros.rs  mod.rs  module_index.rs  settings_index.rs  sysinfo_index.rs
src/models/: mod.rs  modules.rs  sensors.rs
src/xmz_mod_touch_client/: mod.rs  xmz_mod_touch_client.rs
tests/: Makefile.am  lib.rs  modbus-client.vala  modbus-server.vala  sensor-list-box.vala  sensor-list-view.vala  sensor-list.vala  sensor-view.vala  test-database-backend.vala  test-example.vala  test-main.vala  test-modbus-backend.vala  test-modbus-functions.vala  test-sensor-controller.vala  test-sensor-model.vala  test-test.vala  test-treeiter.vala  testmain.vala  unit-test-gtk.vala  unit-test.vala
tests/libxmz/: Makefile.am  main.vala
tests/support/: main.vala  test.vala  xmz-assert.h  xmz-assert.vapi
tests/xmz/: Makefile.am  main.vala
vapi/: config.vapi  libmodbus.vapi
version1/src/: #basic_window.glade#  #sensorwidget.glade#  demo  gresource.gresource  gresource.xml  main_window  main_window.vala  sensor-resources.xml  sensorwidget.c  sensorwidget.glade  sensorwidget.vala  test_gresource.vala
xmz/: Makefile.am  xmz-application.vala  xmz-notifications.vala  xmz-resource.vala  xmz-sensor-controller.vala  xmz-sensor-model.vala  xmz-sensor-view.vala  xmz-sensor.vala  xmz-settings-view.vala  xmz-simple-notification.vala  xmz-ui-elements.vala  xmz-window.vala  xmz.vala
xmz/preferences/: xmz-preferences-interface.vala
xmz/resources/: xmz-resources.xml
xmz/resources/ui/: style.css  xmz-preferences-interface.ui  xmz-sensor-view.ui  xmz-settings-view.ui  xmz-simple-notification.ui  xmz-window.ui
xmz/sensor/: xmz-sensor.vala
