[package]
name = "xmz_mod_touch_gui"
version = "0.99.0"
authors = ["Stefan Müller <s.mueller@it.kls-glt.de>"]
description = "Grafische Oberfläche der 'xMZ-Mod-Touch'-Platform"
documentation = "https://gaswarnanlagen.com/xmz-mod-touch"
homepage = "https://gaswarnanlagen.com/xmz-mod-touch"
repository = "https://github.com/zzeroo/xMZ-Mod-Touch-GUI.git"
license = "GPLv2"

[[bin]]
name = "xmz-mod-touch-gui"
path = "src/bin/xmz_mod_touch_gui.rs"
doc = false

[features]
development = []

[dependencies]
clap = "2"
env_logger = "0.4"
gdk = { git = "https://github.com/gtk-rs/gdk.git" }
glib = { git = "https://github.com/gtk-rs/glib.git" }
gobject-sys = { git = "https://github.com/gtk-rs/sys" }
gtk = { git = "https://github.com/gtk-rs/gtk.git", features = ["v3_22"] }
gtk-sys = { git = "https://github.com/gtk-rs/sys.git" }
hyper = "*"
libc = "*"
log = "0.3"
rand = "0.3"
serde = "1"
serde_json = "1"
xmz_mod_touch_server = { git = "https://github.com/Kliemann-Service-GmbH/xMZ-Mod-Touch-Server.git", branch = "master", version = "0.99" }
# xmz_mod_touch_server = { path = "../xMZ-Mod-Touch-Server" }
