[package]
name = "xmz_mod_touch_gui"
version = "0.99.6"
authors = ["Stefan Müller <s.mueller@it.kls-glt.de>"]
description = "Grafische Oberfläche der 'xMZ-Mod-Touch'-Platform"
documentation = "https://gaswarnanlagen.com/xmz-mod-touch"
homepage = "https://gaswarnanlagen.com/xmz-mod-touch"
repository = "https://github.com/zzeroo/xMZ-Mod-Touch-GUI.git"
license = "GPLv2"

[[bin]]
name = "xmz-mod-touch-gui"
path = "src/bin/gui.rs"
doc = false

[features]
development = []
#default = ["gtk_3_20"]
gtk_3_10 = ["gtk/v3_10"]
gtk_3_16 = ["gtk_3_10", "gtk/v3_16"]
gtk_3_18 = ["gtk_3_16", "gtk/v3_18"] #for CI tools
gtk_3_20 = ["gtk_3_18", "gtk/v3_20"] #for CI tools
gtk_3_22 = ["gtk_3_20", "gtk/v3_22"] #for CI tools

[dependencies]
# gobject-sys = { git = "https://github.com/gtk-rs/sys" }
# gtk-sys = { git = "https://github.com/gtk-rs/sys.git" }
env_logger = "0.4"
error-chain = "0.10"
gdk = { git = "https://github.com/gtk-rs/gdk.git" }
glib = { git = "https://github.com/gtk-rs/glib.git" }
gtk = { git = "https://github.com/gtk-rs/gtk.git", features = ["v3_22"] }
hyper = "0.10.0"
libc = "0.2.24"
log = "0.3"
rand = "0.3"
serde = "1"
serde_json = "1"
xmz_mod_touch_server = { git = "https://github.com/Kliemann-Service-GmbH/xMZ-Mod-Touch-Server.git", version = "0.99" }

[dependencies.clap]
version = "~2.24"
default-features = false
 # Cherry-pick the features you'd like to use
features = [ "color" ]
